fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,8 @@ elseif (UNIX)
     source_group("OSDependent\\Linux" FILES ${OSDEPENDENT_FILES})
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/hlslang/OSDependent/Linux)
 
-    add_custom_command(OUTPUT hlslang/MachineIndependent/hlslang_tab.cpp hlslang/MachineIndependent/hlslang_tab.h 
+    add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/hlslang/MachineIndependent/hlslang_tab.cpp
+                              ${CMAKE_CURRENT_SOURCE_DIR}/hlslang/MachineIndependent/hlslang_tab.h
                          COMMAND set ARGS "BISON_SIMPLE=../../tools/bison.simple"
                          COMMAND set ARGS "BISON_HAIRY=../../tools/bison.simple"
                          COMMAND bison ARGS -o hlslang_tab.cpp -d -t -v hlslang.y
@@ -182,7 +183,7 @@ elseif (UNIX)
                          COMMENT "Executing Bison on hlslang.y"
                       )
                    
-    add_custom_command(OUTPUT hlslang/MachineIndependent/Gen_hlslang.cpp
+    add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/hlslang/MachineIndependent/Gen_hlslang.cpp
                          COMMAND flex ARGS hlslang.l
                          MAIN_DEPENDENCY hlslang/MachineIndependent/hlslang.l
                          DEPENDS hlslang/MachineIndependent/hlslang_tab.h
@@ -208,7 +209,7 @@ add_library(hlsl2glsl
                 ${OSDEPENDENT_FILES}
                 ${MACHINE_INDEPENDENT_GENERATED_SOURCE_FILES}
            )
-
+set_property(TARGET hlsl2glsl PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 include_directories(
     ${INCLUDE_FILES} 
